# skepu-gpi

./: .gitignore
examples/: nbody.cpp
src/skepu3/cluster/gpi/: appendix_map.hpp  container.hpp  filter.hpp  machinefile.h  main.cpp  map.hpp  matrix.hpp  reduce.hpp  scan.hpp
tests/: CMakeLists.txt
tests/map/: CMakeLists.txt
tests/reduce/: CMakeLists.txt
